--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -49,7 +49,7 @@ jobs:
           path: allure-results
 
       - name: Generate Allure report
-        run: npx allure generate allure-results --clean -o allure-report
+        run: npx allure-commandline generate allure-results --clean -o allure-report
 
       - name: Deploy report to gh-pages
         uses: JamesIves/github-pages-deploy-action@v4
